[project]
name = "query"
version = "0.1.0"
description = "A cascading query tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.4",
    "mysql-connector-python>=9.1.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[project.scripts]
query = "query.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
